--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,9 @@ email_validator==2.1.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
 firebase-admin==6.5.0
+geographiclib==2.0
 geojson==3.1.0
+geopy==2.4.1
 google-api-core==2.19.0
 google-api-python-client==2.133.0
 google-auth==2.30.0
@@ -49,6 +51,7 @@ pyasn1_modules==0.4.0
 pycparser==2.22
 pydantic==2.7.4
 pydantic_core==2.18.4
+pygeohash==1.2.0
 Pygments==2.18.0
 PyJWT==2.8.0
 pyparsing==3.1.2
