--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,9 @@ target/
 profile_default/
 ipython_config.py
 
+# Binary files
+*.mp3
+
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
@@ -127,6 +130,9 @@ celerybeat.pid
 # Environments
 .env
 .venv
+bin/
+lib64
+pyvenv.cfg
 env/
 venv/
 ENV/
