--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 cryptography==42.0.8
+distro==1.9.0
 dnspython==2.6.1
 email_validator==2.1.1
 fastapi==0.111.0
@@ -68,6 +69,7 @@ shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 starlette==0.37.2
+tqdm==4.66.4
 typer==0.12.3
 typing_extensions==4.12.2
 ujson==5.10.0
