--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+ably==2.0.6
 annotated-types==0.7.0
 anyio==4.4.0
 azure-core==1.30.2
@@ -32,16 +33,20 @@ googlemaps==4.10.0
 grpcio==1.64.1
 grpcio-status==1.62.2
 h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
 httpcore==1.0.5
 httplib2==0.22.0
 httptools==0.6.1
 httpx==0.27.0
+hyperframe==6.0.1
 idna==3.7
 isodate==0.6.1
 Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+methoddispatch==3.0.2
 msgpack==1.0.8
 numpy==1.26.4
 openai==1.35.13
@@ -54,6 +59,7 @@ pyasn1_modules==0.4.0
 pycparser==2.22
 pydantic==2.7.4
 pydantic_core==2.18.4
+pyee==11.1.0
 pygeohash==1.2.0
 Pygments==2.18.0
 PyJWT==2.8.0
