--- a/requirements.txt
+++ b/requirements.txt
@@ -65,10 +65,12 @@ PyJWT==2.8.0
 pyparsing==3.1.2
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.3
 rich==13.7.1
 rsa==4.9
+schedule==1.2.2
 shapely==2.0.4
 shellingham==1.5.4
 six==1.16.0
