--- a/requirements.txt
+++ b/requirements.txt
@@ -63,6 +63,7 @@ pyee==11.1.0
 pygeohash==1.2.0
 Pygments==2.18.0
 PyJWT==2.8.0
+pymongo==4.8.0
 pyparsing==3.1.2
 python-dotenv==1.0.1
 python-multipart==0.0.9
