--- a/Pipfile
+++ b/Pipfile
@@ -95,6 +95,8 @@ uvloop = "==0.19.0"
 watchdog = "==4.0.1"
 watchfiles = "==0.22.0"
 websockets = "==12.0"
+sqlmodel = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 pyright = "*"
