--- a/Pipfile
+++ b/Pipfile
@@ -63,7 +63,7 @@ protobuf = "==4.25.3"
 pyasn1 = "==0.6.0"
 pyasn1-modules = "==0.4.0"
 pycparser = "==2.22"
-pydantic = "==2.7.4"
+pydantic = "*"
 pydantic-core = "==2.18.4"
 pyee = "==11.1.0"
 pygeohash = "==1.2.0"
@@ -95,8 +95,10 @@ uvloop = "==0.19.0"
 watchdog = "==4.0.1"
 watchfiles = "==0.22.0"
 websockets = "==12.0"
-sqlmodel = "*"
 psycopg2-binary = "*"
+sqlmodel = "*"
+geoalchemy2 = "*"
+sqlalchemy = "*"
 
 [dev-packages]
 pyright = "*"
@@ -105,6 +107,7 @@ isort = "*"
 pyflakes = "*"
 black = "*"
 pytest = "*"
+debugpy = "*"
 
 [requires]
 python_version = "3.12"
