--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,33 @@
+[project]
+name = "dogy-backend"
+version = "0.1.0"
+description = "Backend for Dogy App."
+readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "azure-storage-blob>=12.24.0",
+    "fastapi[standard]>=0.115.6",
+    "geoalchemy2>=0.16.0",
+    "geojson>=3.1.0",
+    "googlemaps>=4.10.0",
+    "psycopg2-binary>=2.9.10",
+    "pygeohash>=1.2.0",
+    "pytest-cov>=6.0.0",
+    "shapely>=2.0.6",
+    "sqlmodel>=0.0.22",
+]
+
 [tool.ruff.lint]
 extend-select = ["I", "N", "C4", "TCH", "SIM", "FAST"]
 ignore = []
+
+[dependency-groups]
+dev = [
+    "debugpy>=1.8.11",
+    "pyright>=1.1.391",
+    "pytest>=8.3.4",
+    "ruff>=0.8.3",
+]
 
 [tool.ruff]
 show-fixes = true
