--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
 ]
 
 [tool.ruff.lint]
-extend-select = ["I", "N", "C4", "TCH", "SIM", "FAST"]
+extend-select = ["I", "F", "N", "C4", "TCH", "SIM", "FAST"]
 ignore = []
 
 [dependency-groups]
@@ -31,4 +31,10 @@ dev = [
 
 [tool.ruff]
 show-fixes = true
-target-version = "py37"
+target-version = "py312"
+
+[lint.isort]
+known-local-folder = ["app"]
+force-sort-within-sections = true
+order-by-type = true
+from-first = false
