--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,15 @@ description = "Backend for Dogy App."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "azure-identity>=1.19.0",
+    "azure-keyvault-secrets>=4.9.0",
     "azure-storage-blob>=12.24.0",
     "fastapi[standard]>=0.115.6",
     "geoalchemy2>=0.16.0",
     "geojson>=3.1.0",
     "googlemaps>=4.10.0",
     "psycopg2-binary>=2.9.10",
+    "pydantic-settings>=2.7.0",
     "pygeohash>=1.2.0",
     "pytest-cov>=6.0.0",
     "shapely>=2.0.6",
