--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pydantic-settings>=2.7.0",
     "pygeohash>=1.2.0",
     "pytest-cov>=6.0.0",
+    "scalar-fastapi>=1.0.3",
     "shapely>=2.0.6",
     "sqlmodel>=0.0.22",
 ]
