--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "azure-identity>=1.19.0",
     "azure-keyvault-secrets>=4.9.0",
     "azure-storage-blob>=12.24.0",
+    "fastapi-clerk-auth>=0.0.5",
     "fastapi[standard]>=0.115.6",
     "geoalchemy2>=0.16.0",
     "geojson>=3.1.0",
