--- a/package.json
+++ b/package.json
@@ -1,29 +1,33 @@
 {
-  "name": "dogy-backend",
-  "version": "0.1.0",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "bun run src/db/migrate.ts",
-    "db:update": "bun run db:generate && bun run db:migrate",
-    "db:drop": "drizzle-kit drop",
-    "db:push": "drizzle-kit push"
-  },
-  "dependencies": {
-    "@elysiajs/jwt": "^1.2.0",
-    "@elysiajs/swagger": "^1.2.0",
-    "@pitininja/envious": "^5.1.0",
-    "drizzle-orm": "^0.38.4",
-    "drizzle-typebox": "^0.2.1",
-    "elysia": "^1.2.10",
-    "pg": "^8.13.1",
-    "uuid": "^11.0.5"
-  },
-  "devDependencies": {
-    "@types/pg": "^8.11.11",
-    "bun-types": "^1.2.0",
-    "drizzle-kit": "^0.30.2"
-  },
-  "module": "src/index.js"
+	"name": "dogy-backend",
+	"version": "0.1.0",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "bun run --watch src/index.ts",
+		"db:generate": "drizzle-kit generate",
+		"db:migrate": "bun run src/db/migrate.ts",
+		"db:update": "bun run db:generate && bun run db:migrate",
+		"db:drop": "drizzle-kit drop",
+		"db:push": "drizzle-kit push"
+	},
+	"dependencies": {
+		"@elysiajs/jwt": "^1.2.0",
+		"@elysiajs/swagger": "^1.2.0",
+		"@pitininja/envious": "^5.1.0",
+		"@sinclair/typebox": "0.34.14",
+		"drizzle-orm": "^0.38.4",
+		"drizzle-typebox": "^0.2.1",
+		"elysia": "^1.2.10",
+		"pg": "^8.13.1",
+		"uuid": "^11.0.5"
+	},
+	"override": {
+		"@sinclair/typebox": "0.32.4"
+	},
+	"devDependencies": {
+		"@types/pg": "^8.11.11",
+		"bun-types": "^1.2.0",
+		"drizzle-kit": "^0.30.2"
+	},
+	"module": "src/index.js"
 }
