--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
 		"bun-types": "^1.2.0",
 		"drizzle-kit": "^0.30.2"
 	},
-	"module": "src/index.js"
+	"module": "src/index.js",
+	"patchedDependencies": {
+		"jose@4.15.9": "patches/jose@4.15.9.patch"
+	}
 }
