--- a/package.json
+++ b/package.json
@@ -11,27 +11,22 @@
 		"db:push": "drizzle-kit push"
 	},
 	"dependencies": {
-		"@bogeychan/elysia-logger": "^0.1.8",
-		"@elysiajs/jwt": "^1.2.0",
-		"@elysiajs/swagger": "^1.2.0",
-		"@pitininja/envious": "^5.1.0",
-		"@sinclair/typebox": "0.34.14",
+		"@hono/zod-openapi": "^0.18.3",
+		"@scalar/hono-api-reference": "^0.5.168",
 		"drizzle-orm": "^0.38.4",
-		"drizzle-typebox": "^0.2.1",
-		"elysia": "^1.2.10",
+		"drizzle-zod": "^0.7.0",
+		"hono": "^4.6.19",
+		"hono-pino": "^0.7.0",
 		"pg": "^8.13.1",
-		"uuid": "^11.0.5"
-	},
-	"override": {
-		"@sinclair/typebox": "0.32.4"
+		"pino-pretty": "^13.0.0",
+		"stoker": "^1.4.2",
+		"uuid": "^11.0.5",
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@types/pg": "^8.11.11",
 		"bun-types": "^1.2.0",
 		"drizzle-kit": "^0.30.2"
 	},
-	"module": "src/index.js",
-	"patchedDependencies": {
-		"jose@4.15.9": "patches/jose@4.15.9.patch"
-	}
+	"module": "src/index.js"
 }
