chore: added baseline config for env vars

--- a/sqlc.yml
+++ b/sqlc.yml
@@ -1,5 +1,5 @@
 version: "2"
 sql:
   - engine: "postgresql"
-    queries: "./internal/database/queries"
-    schema: "./internal/database/migrations"
+    queries: "./database/queries"
+    schema: "./database/migrations"
