--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,3 +51,8 @@ jobs:
           overwrite: true
           release_name: "Release ${{ github.ref_name }}"
           body: "${{ needs.generate-changelog.outputs.release_body }}"
+      - name: Send to Discord
+        uses: discord-actions/message@v2
+        with:
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          message: "${{ needs.generate-changelog.outputs.release_body }}"
