--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,11 @@ edition = "2021"
 
 [dependencies]
 axum = "0.8.1"
+dotenv = "0.15.0"
+jsonwebtoken = "9.3.1"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
