--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 axum = "0.8.1"
 chrono = { version = "0.4.40", features = ["serde"] }
 dotenv = "0.15.0"
+futures = "0.3.31"
 jsonwebtoken = "9.3.1"
+reqwest = { version = "0.12.15", features = ["json", "native-tls"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
