--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,9 @@ on:
       - "v*.*.*"
 permissions:
   contents: write
+env:
+  CARGO_INCREMENTAL: 0
+  BINARY_ARTIFACT_NAME: "backend-api-release-${{ github.ref_name }}"
 jobs:
   generate-changelog:
     name: Generate Changelog
@@ -14,45 +17,99 @@ jobs:
       release_body: ${{ steps.git-cliff.outputs.content }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Generate changelog
         id: git-cliff
         uses: orhun/git-cliff-action@v4
         with:
           config: cliff.toml
-          args: -vv --latest --strip header
+          args: -v --latest --no-exec --github-repo ${{ github.repository }}
         env:
           OUTPUT: CHANGELOG.md
-          GITHUB_REPO: ${{ github.repository }}
-  release:
-    name: Build & Release
+  build:
+    name: Build Rust Binary
     runs-on: ubuntu-latest
-    needs: generate-changelog
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install Rust Toolchain
+        run: rustup toolchain install stable --profile minimal --no-self-update
+      - name: Setup caching
+        uses: Swatinem/rust-cache@v2
+      - name: Compile Rust Binary
+        run: cargo build --release --bin dogy-backend-api
+      - name: Upload Binary to Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.BINARY_ARTIFACT_NAME }}
+          path: target/release/dogy-backend-api
+          overwrite: true
+          compression-level: 0
+          if-no-files-found: error
+  image-build:
+    name: Build Image and Push to Registry
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Create Release directory
+        run: mkdir -pv target/release
+      - name: Download Rust Binary Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ env.BINARY_ARTIFACT_NAME }}
+          path: ./target/release/
+      - name: Login to Azure
+        uses: azure/docker-login@v2
+        with:
+          login-server: ${{ vars.ACR_SERVER }}
+          username: ${{ vars.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
+      - name: Set Image version
+        run: |
+          img_version="$(echo "${{ github.ref_name }}" | sed 's/v//')"
+          echo "IMAGE_VERSION=$img_version" >> $GITHUB_ENV
+      - name: Setup Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and Push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          context: .
+          tags: ${{ vars.ACR_SERVER }}/dogy-backend-api:${{ env.IMAGE_VERSION }}
+          platforms: linux/amd64
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: ["generate-changelog", "build"]
     permissions:
       contents: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/checkout@v4
+      - name: Create Release directory
+        run: mkdir -pv target/release
+      - name: Download Rust Binary Artifact
+        uses: actions/download-artifact@v4
         with:
-          go-version: '1.23.x'
-          cache-dependency-path: ./go.sum
-      - name: Build Artifact
-        run: |
-          mkdir -pv bin
-          go build -v -o ./bin/backend-api-linux-x86_64-${{ github.ref_name }} ./cmd/main.go
+          name: ${{ env.BINARY_ARTIFACT_NAME }}
+          path: ./target/release
+      - name: Rename binary
+        run: mv -v target/release/dogy-backend-api target/release/backend-api-linux-x86_64-${{ github.ref_name }}
       - name: Create Release
         uses: svenstaro/upload-release-action@v2
         with:
-          file: bin/backend-api-linux-x86_64-${{ github.ref_name }}
+          file: target/release/backend-api-linux-x86_64-${{ github.ref_name }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.ref }}
           overwrite: true
           release_name: "Release ${{ github.ref_name }}"
           body: "${{ needs.generate-changelog.outputs.release_body }}"
-      - name: Send to Discord
+      - name: Send Message to Discord
         uses: discord-actions/message@v2
         with:
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          message: "${{ needs.generate-changelog.outputs.release_body }}"
+          message: "# Release ${{ github.ref_name }} for Dogy Backend API\n Read the [full changelog here](${{ github.server_url }}/${{ github.repository }}/releases/tag/${{ github.ref_name }})."
