--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,8 @@ jobs:
         run: rustup toolchain install stable --profile minimal --no-self-update
       - name: Setup caching
         uses: Swatinem/rust-cache@v2
+        with:
+          shared-key: "release-build"
       - name: Compile Rust Binary
         run: cargo build --release --bin dogy-backend-api
       - name: Upload Binary to Artifacts
