--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,8 @@ tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
 uuid = { version = "1.16.0", features = ["serde", "v7"] }
+
+[dev-dependencies]
+axum-test = "17.3.0"
+testcontainers = "0.23.3"
+testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
