--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ axum = { version = "0.8.1", features = ["multipart"] }
 azure_storage = "0.21.0"
 azure_storage_blobs = "0.21.0"
 chrono = { version = "0.4.40", features = ["serde"] }
+chrono-tz = "0.10.3"
 derive_more = { version = "2.0.1", features = ["from", "display"] }
 dotenv = "0.15.0"
 futures = "0.3.31"
